--- a/generic.html
+++ b/generic.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html" class="active">Skills and Jobs</a></li>
-						<li><a href="elements.html">Project Idea/Reflection</a></li>
+						<li><a href="elements.html">Reflection/Refrence</a></li>
 					</ul>
 				</nav>
 			</header>
