--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ Last semester, I applied Programming Tech and Intro to Program to learn Java and
 							<div class="content">
 								<div class="inner">
                                     <h2>Tools</h2>
-									<p>Github CSS HTML and We set up a group on Canvas and use Teams and Wechat to discuss.</p>
+									<p>Github CSS HTML and We set up a group on Canvas and use MS and Wechat to discuss.</p>
+									<p>https://kerwin-rmit.github.io/Genesis/</p>
+									<p>https://github.com/Kerwin-rmit/Genesis</p>
                                     <h2>Overview</h2>
                                     
                                     <h2>Topic</h2>
